# PythonWebPractice

./: .gitignore
Docker/: dockerfile
Module03/: 1.py  12.py  2_log.py  3.py  Condition.py  Event.py  Event2.py  Z_progger_1.py  Z_progger_2_daemon.py  Z_progger_3_lock_RLOCK.py  Z_progger_Process1.py  Z_progger_Process2.py  Z_progger_Process3_classes.py  Z_progger_local.py  Z_progger_timer.py  Z_semaphore_barrier.py  cisco.py  cisco3.py  enumerate.py  pool_threats.py  tik2.py  timer.py
Module04/: client.py  client2.py  my_server.py  simple_server.py  test.html  test.py  test_ji.py
Module05/: 01_intro.py  02_fake_db.py  03_gather_db.py  04_create_task.py  1.py  practice1.py  practice2_promisies.py
Module06/: change_table.py  create_table.py  db_connection.py  insert_values.py  main.py  pyproject.toml  select_from_table.py  update_table.py
Module06/SQL_lite_Practice/: creating_tables.sql  enter_values_and_data.sql  example.db  example_db  join_update_delete_drop.sql  more_selects.sql  my_selects.sql
Module07_SQLAlchemy/SQL_AL/: pyproject.toml
Module07_SQLAlchemy/SQL_AL/sql_al/: config.ini  main.py
Module07_SQLAlchemy/SQL_AL/sql_al/database/: db.py  models.py  repository.py
Module07_SQLAlchemy/SQL_AL/sql_al/practice/: 1.py  3_session_example.py  5_session_async.py
Module07_SQLAlchemy/Second_Alemb/: config.ini  main.py  pyproject.toml
Module07_SQLAlchemy/Second_Alemb/migrations/: env.py
Module07_SQLAlchemy/Second_Alemb/migrations/versions/: 06f5a411cbf1_add_table_contacts.py  076e24b5aafe_update_table_contacts.py  1a218906c450_init.py
Module07_SQLAlchemy/Second_Alemb/seed/: delete_data.py  rel.py  seed_contacts.py  students.py  teachers.py
Module07_SQLAlchemy/Second_Alemb/src/: db.py  models.py
Module08_Mongo_NoSQL/: pyproject.toml
Module08_Mongo_NoSQL/mongoengine/: colors.py  connect.py  create.py  delete.py  links.txt  models.py  read.py  seed_posts.py  seed_users.py  update.py
Module08_Mongo_NoSQL/pymongo_example/: app.py  connect.py
Module08_Mongo_NoSQL/rabbitMQ/pub_sub/: sub_consumer.py  sub_produser.py
Module08_Mongo_NoSQL/rabbitMQ/simple/: consumer.py  producer.py
Module08_Mongo_NoSQL/rabbitMQ/tasks/: consumer_tasks.py  producer_tasks.py
Module08_Mongo_NoSQL/redis/: test_cache.py  test_cache_with_timer.py
Module10_Django/: pyproject.toml
Module10_Django/m09_10_01/: pyproject.toml
Module10_Django/m09_10_01/killer_instagram/app_instagram/: urls.py  views.py
Module10_Django/m09_10_01/killer_instagram/app_instagram/templates/app_instagram/: base.html  index.html  pictures.html  upload.html
Module10_Django/m09_10_01/killer_instagram/killer_instagram/: asgi.py  settings.py  urls.py  wsgi.py
(+51 files in other folders)
