[tool.poetry]
name = "module06"
version = "0.1.0"
description = ""
authors = ["Nikita Sherstianykh <n.sherstianykh@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
psycopg2 = "^2.9.5"
faker = "^18.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
