[tool.poetry]
name = "module08-mongo-nosql"
version = "0.1.0"
description = ""
authors = ["Nikita Sherstianykh <n.sherstianykh@gmail.com>"]
readme = "README.md"
packages = [{include = "module08_mongo_nosql"}]

[tool.poetry.dependencies]
python = "^3.10"
pymongo = {extras = ["srv", "tls"], version = "^4.3.3"}
mongoengine = "^0.27.0"
faker = "^18.6.0"
redis-lru = "^0.1.2"
pika = "^1.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
