[tool.poetry]
name = "second-alemb"
version = "0.1.0"
description = ""
authors = ["Nikita Sherstianykh <n.sherstianykh@gmail.com>"]
readme = "README.md"
packages = [{include = "second_alemb"}]

[tool.poetry.dependencies]
python = "^3.10"
alembic = "^1.10.3"
faker = "^18.4.0"
psycopg2 = "^2.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
