[tool.poetry]
name = "m09-10-01"
version = "0.1.0"
description = ""
authors = ["Nikita Sherstianykh <n.sherstianykh@gmail.com>"]
readme = "README.md"
packages = [{include = "m09_10_01"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.3"
psycopg2 = "^2.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
